# options-risk-engine

./: .dockerignore  .gitignore  CMakeLists.txt  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: main.py  market_data.py  schemas.py
api/tests/: test_api.py  test_market_data_cache.py  test_market_data_yahoo_adapter.py
cpp/benchmarks/: price_many_options.cpp
cpp/include/options/: BinomialTree.hpp  BlackScholes.hpp  Greeks.hpp  HedgingSimulator.hpp  ImpliedVol.hpp  LocalVolatility.hpp  MonteCarlo.hpp  Portfolio.hpp  RiskEngine.hpp  StochasticVolatility.hpp  Types.hpp  VolSurface.hpp
cpp/src/: BinomialTree.cpp  BlackScholes.cpp  Greeks.cpp  HedgingSimulator.cpp  ImpliedVol.cpp  LocalVolatility.cpp  MonteCarlo.cpp  Portfolio.cpp  RiskEngine.cpp  StochasticVolatility.cpp  VolSurface.cpp
cpp/tests/: test_advanced_vol_models.cpp  test_black_scholes.cpp  test_greeks.cpp  test_hedging_simulator.cpp  test_implied_vol.cpp  test_numerical_models.cpp  test_portfolio_risk.cpp  test_vol_surface.cpp
docker/: api.Dockerfile  frontend.Dockerfile
docs/: architecture.md  benchmarks.md  models.md  numerical_methods.md  risk_methodology.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnalyticsTabs.tsx  App.tsx  apiClient.test.ts  apiClient.ts  components.tsx  dashboard.css  domainTypes.ts  formatters.test.ts  formatters.ts  main.tsx  marketUtils.test.ts  marketUtils.ts  styles.css  valuationUtils.test.ts  valuationUtils.ts
python/options_lab/: __init__.py
python/options_lab/analytics/: __init__.py  hedging.py  portfolio.py  pricing.py  surface.py  types.py
python/options_lab/bindings/: __init__.py  module.cpp
python/options_lab/calibration/: __init__.py  option_chain.py
python/options_lab/plotting/: __init__.py  charts.py
python/options_lab/research/: __init__.py  benchmark_pricing.py  hedging_experiments.py
python/tests/: test_python_analytics.py  test_python_fallback.py
reports/: hedging_error_report.md
