[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-risk-engine"
version = "0.1.0"
description = "Production-style options pricing, risk, vol surface, and hedging lab."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.20",
  "yfinance>=0.2.50",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27", "ruff>=0.8"]
bindings = ["pybind11>=3.0"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["python/tests", "api/tests"]
pythonpath = ["python", "."]
addopts = "--strict-markers"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["build", "build-pybind", "frontend", "notebooks"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
